--- a/.github/workflows/build - manual.yml
+++ b/.github/workflows/build - manual.yml
@@ -19,6 +19,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      
+      - name: install npm
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
